# grid2op-classification

./: .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml
scripts/: data_experimentation.py  generate_data.py  load_data.py  topology_greedy_comparison.py  train.py
src/: __init__.py  dataset.py  reward.py
